# mutational-signatures-data

./: LICENSE  README.md  main.py  pyproject.toml
data/Example_MSK_IMPACT_410_MAFs/: DO224865  DO224980  DO225140  DO225331  DO225337  DO225360  DO227836
data/foundation_one_exons_panel/: BRCA-EU.csv  BRCA-FR.csv
data/foundation_one_genes_panel/: BRCA-UK.csv  BRCA-US.csv
data/msk_impact_nature_2017/: msk_impact_2017-410_panel_breast_cancer_only.csv  msk_impact_2017-410_panel_only.csv  msk_impact_2017-all_samples.csv  msk_impact_2017-breast_cancer_only.csv
data/mutational_spectra_panel/: BRCA-EU.csv  BRCA-FR.csv  BRCA-UK.csv  BRCA-US.csv
data/mutational_spectra_wgs/: BRCA-EU.csv  BRCA-FR.csv  BRCA-UK.csv  BRCA-US.csv
lib/: icgc.py  maf.py  msk_impact_410.py
notebooks/: Consuming ICGC Data.ipynb  Consuming and Preparing MSK-IMPACT Data.ipynb  Processing ICGC Data.ipynb  Simulating MSK-IMPACT 410.ipynb
