[tool.poetry]
name = "mutational-signatures-data"
version = "0.1.0"
description = ""
authors = ["Jeya Balaji Balasubramanian <jeyabbalas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.27.1"
tqdm = "^4.62.3"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
